# deli

./: .gitignore  Cargo.toml  README.md  deli.toml
.github/workflows/: ci.yml
preview/config/: rollout-plan.json  services.json
preview/data/: documents.json
preview/docs/: deploy-runbook.mdx  index.mdx  observability.md
preview/monitor/: cpu-load.json
preview/providers/: configs.sh  docs.sh  metrics.sh  services.sh
preview/services/: resources.json
src/: lib.rs  main.rs
src/app/: mod.rs  state.rs
src/models/: config.rs  dataframe.rs  document.rs  error.rs  mod.rs  timeseries.rs
src/providers/: command.rs  mod.rs  registry.rs
src/providers/actions/: command.rs
src/providers/configs/: command.rs
src/providers/documents/: command.rs  feishu_auth.rs  http.rs  mod.rs
src/providers/monitoring/: command.rs  http.rs
src/providers/services/: command.rs
src/runtime/: event.rs  gnuplot.rs  mod.rs  terminal_theme.rs
src/ui/: render.rs
tests/: integration.rs
tests/fixtures/: configs.sh  docs.sh  metrics.sh
