[package]
name = "deli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
pulldown-cmark = "0.12"
ratatui = "0.30"
ratatui-code-editor = "0.0.3"
ratatui-image = { version = "10.0.6", default-features = false, features = ["image-defaults", "crossterm"] }
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
tui-markdown = "0.3.7"

[dev-dependencies]
tempfile = "3.14"
